objects/Part_Selector_46_69_Output__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Appliccation_Type__c</fullName>
        <label>Appliccation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Length__c</fullName>
        <label>Connector Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Range__c</fullName>
        <label>End Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_OD_End_Range__c</fullName>
        <label>Insulation OD End Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_OD_Start_Range__c</fullName>
        <label>Insulation OD Start Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Jacket_OD_End_Range_c__c</fullName>
        <label>Max Jacket OD End Range</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Jacket_OD__c</fullName>
        <label>Max Jacket OD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <label>Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Range__c</fullName>
        <label>Start Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voltage__c</fullName>
        <label>Voltage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Part Selector 46_69 Output</label>
</CustomObject>